--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Restaurant/Restaurants.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Restaurant/Restaurants.cshtml
@@ -15,9 +15,10 @@
 
 }
 <link href="~/Content/css/CreatedCSS/hyperlink.css" rel="stylesheet" />
-<section style="padding-top:10em" class="bg-light">
+<section style="padding-top:10em" >
     <div class="container">
-        <h2 class="text-center mb-5 mt-5">Restaurants</h2>
+        <h2 class="text-center  mt-5">Restaurants</h2>
+        <hr class="mb-5" />
         <div class="row mb-5">
 
             @foreach (var item in Model)
