--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Dishes/FoodItems.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Dishes/FoodItems.cshtml
@@ -21,7 +21,7 @@
        <div class="row">
            <div class="col-md-4 mt-2 mb-3">
             
-               <img src="@Url.Content(@Model.Restaurant.Image)" style="width:150px;height:150px" class="rounded-circle border border-warning border-3"/>
+               <img src="@Url.Content(@Model.Restaurant.Image)" style="width:150px;height:150px" class="rounded-circle border border-white border-3"/>
 
            </div>
            <div class="col-md-4 my-auto">
@@ -48,7 +48,10 @@
 
 
            </div>
-           <div class="col-md-4">
+           <div class="col-md-4 my-auto p-0">
+               <div class="border rounded text-warning text-center border-2 border-warning p-2">
+                   <h5 class="my-auto"><i>@Model.Restaurant.Offer on all orders</i></h5>
+               </div>
 
            </div>
 
@@ -58,48 +61,86 @@
 
 </section>
 
-<section >
+<section>
 
-    <div class="container">
-        
-        <div class="row mt-3 mb-3">
-            @foreach (var item in Model.Dishes)
+    <div class="container-fluid">
+        <div class="row">
+
+           
+            
+            <div class="col-md-2" style="border-right:solid">
+                <h4 class="mt-3">Filters</h4>
+                <hr class="mb-5" />
+                @using (Html.BeginForm("FoodItems", "Dishes"))
             {
-                <div class="col-md-4" >
-                    <div class="card shadow" style="width: 18rem;border-radius:5%">
-                        <img src="@Url.Content(item.DishImage)" />
-                        <div class="card-body text-center">
-                            <h5 class="card-title">@item.DishName</h5>
-                            <p class="card-text">@item.DishDesc</p>
-                            <p class="card-text">Rs.@item.DishPrice</p>
-                      
-                            @if (item.buttonName == "Added")
-                            {
-                                <button id="@item.DishId" class="btn btn-dark btn-block disabled"><i class="bi bi-cart-check"></i>Added</button>
-                            }
-                            @if (item.buttonName == "Add")
-                            {
-                                <button id="@item.DishId" class="btn btn-dark btn-block btnAdd"><i class="bi bi-cart-check"></i>Add to Cart</button>
-                            }
+
+            
+                    <div class="mb-3">
+                        @Html.DropDownList("vegOrNonVeg", ViewBag.rbVegorNon as List<SelectListItem>, new { @class = "form-control" })
+                    </div>
+                <div class="mb-3">
+                    @Html.DropDownList("catId", ViewBag.ddlCategory as List<SelectListItem>, new { @class = "form-control" })
+                </div>
+                <button type="submit" style="display:inline" class="btn btn-outline-primary my-auto">Filter</button>
+                }
+            </div>
+            
+                <div class="col-md-10">
+
+                    <div class="mt-2  ms-auto my-auto">
+                        @using (Html.BeginForm("FoodItems", "Dishes"))
+                        {
+
+                            @Html.TextBox("search", null, new { @class = "form-control", style = "width:500px;display:inline" })
+
+                            <button type="submit" style="display:inline" class="btn btn-outline-primary my-auto">Search</button>
+
+
+
+                        }
+
+                    </div>
+                    <hr />
+                    <div class="row mt-3 mb-3">
+                        @foreach (var item in Model.Dishes)
+                        {
+                            <div class="col-md-4">
+                                <div class="card shadow" style="width: 18rem;border-radius:5%">
+                                    <img src="@Url.Content(item.DishImage)" />
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title">@item.DishName</h5>
+                                        <p class="card-text">@item.DishDesc</p>
+                                        <p class="card-text">Rs.@item.DishPrice</p>
+
+                                        @if (item.buttonName == "Added")
+                                        {
+                                            <button id="@item.DishId" class="btn btn-dark btn-block disabled"><i class="bi bi-cart-check"></i>Added</button>
+                                        }
+                                        @if (item.buttonName == "Add")
+                                        {
+                                            <button id="@item.DishId" class="btn btn-dark btn-block btnAdd"><i class="bi bi-cart-check"></i>Add to Cart</button>
+                                        }
 
 
 
 
-                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+
+
+                        }
+                        @Html.Hidden("RestId", @TempData["RestId"], new { @id = "hdnRestId" })
+
+
                     </div>
 
                 </div>
-
-
-            }
-            @Html.Hidden("RestId", @TempData["RestId"], new { @id = "hdnRestId" })
-            
-
-        </div>
+            </div>
 
     </div>
 
-  
 
 </section>
 
@@ -191,6 +232,22 @@
         })
 
     });
+
+
+    //$("#searchItem").blur(function () {
+    //    var searchKey = $("#searchItem").val();
+    //    var restId = $("#hdnRestId").val();
+    //    var VegOrNonveg = $("#VegOrNonveg").val();
+    //    var category = $("#Category").val();
+    //    $.ajax({
+    //        method: "POST",
+    //        url: "/Dishes/FoodItems/",
+    //        data: { "id": restId, "search": searchKey, "vegId": VegOrNonveg, "catId": category },
+    //        success: function (data) {
+    //            alert(data);
+    //        }
+    //    });
+    //})
 
 
 
