--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Restaurant/PendingOrders.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Restaurant/PendingOrders.cshtml
@@ -1,8 +1,136 @@
-﻿
+﻿@using FoodDeliveryWebApplication;
+@model dynamic
+
+
 @{
     ViewBag.Title = "PendingOrders";
     Layout = "~/Views/Shared/_RestaurantLayout.cshtml";
 }
+<section style="padding-top:10em">
+    <div class="container">
 
-<h2>PendingOrders</h2>
 
+        <h2 class="mt-5">Pending Orders</h2>
+
+
+        <table class="table table-hover mt-3 ">
+            <tr class="table-secondary">
+                <th>
+                    Order Id
+                </th>
+                <th>
+                    Dishes Details
+                </th>
+
+                <th>
+                    Customer Name
+                </th>
+
+
+                <th>
+                    Bill Amount
+                </th>
+                <th>
+                    Order Date
+                </th>
+
+
+                <th>
+                    Order Confirmation
+                </th>
+
+                <th></th>
+            </tr>
+
+            @foreach (var item in Model.Order)
+            {
+                <tr>
+                    <td>
+                        @item.fk_OrderId
+                    </td>
+                    <td>
+                        <table border="1">
+                            <tr class="border border-1 border-dark bg-light">
+                                <td class="p-2 border border-1 border-dark">
+                                    Dish id
+                                </td>
+                                <td class="p-2 border border-1 border-dark">
+                                    Dish Name
+                                </td>
+                                <td class="p-2 border border-1 border-dark">
+                                    Quantity(Nos)
+                                </td>
+                            </tr>
+                            @foreach (var dish in Model.Cart)
+                            {
+                                <tr>
+                                    <td class="text-center border border-1 border-dark">
+                                        @dish.DishId
+                                    </td>
+                                    <td class="text-center border border-1 border-dark">
+                                        @dish.DishName
+                                    </td>
+                                    <td class="text-center border border-1 border-dark">
+                                        @dish.Quantity
+                                    </td>
+                                </tr>
+
+                            }
+                        </table>
+
+                    </td>
+
+                    <td>
+                        @item.CusName
+                    </td>
+
+
+                    <td>
+                       <span>Rs.</span>@item.TotalAmount<span>/-</span>
+                    </td>
+                    <td>
+                        @item.Orderdate.ToShortDateString()
+                    </td>
+
+                    <td>
+                        @item.IsOrderConfirmed
+                    </td>
+
+                    <td>
+                        @if (@item.IsOrderConfirmed == "Y")
+                        {
+                            <button class="btn btn-primary btnConfirm disabled">Confirmed</button>
+                        }
+                        else
+                        {
+                            <button class="btn btn-primary btnConfirm">Confirm Order</button>
+                        }
+                      
+                        <input type="hidden" value="@item.fk_OrderId" id="hdnOrderId" />
+
+                    </td>
+                </tr>
+            }
+
+        </table>
+    </div>
+</section>
+
+<script src="~/Scripts/jquery-3.4.1.min.js"></script>
+<script>
+    $(".btnConfirm").click(function () {
+        var id = $("#hdnOrderId").val();
+        $.ajax({
+            method: "POST",
+            url: "/Restaurant/ConfirmOrder/",
+            data: { "id": id },
+            success: function (data) {
+                alert(data)
+            },
+            error: function (err) {
+                alert(err)
+            }
+        });
+
+    })
+</script>
