--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_RestaurantLayout.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_RestaurantLayout.cshtml
@@ -39,15 +39,16 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav  mb-2 mb-lg-0 ms-auto">
-                            <li class="nav-item fs-4 me-4 ">
-                                <a class="nav-link active " aria-current="page" href="/Restaurant/AddDish">Add Dish</a>
+                            <li class="nav-item fs-5 me-4 ">
+                                <a class="nav-link active " aria-current="page" href="/Dishes/DishList">Dishes List</a>
                             </li>
-                            <li class="nav-item fs-4 me-4 ">
-                                <a class="nav-link " href="/Restaurant/OrderHistory">Order history</a>
-                            </li>
-                            <li class="nav-item fs-4 me-4">
+                            <li class="nav-item fs-5 me-4">
                                 <a class="nav-link " href="/Restaurant/PendingOrders">Pending Orders</a>
                             </li>
+                            <li class="nav-item fs-5 me-4 ">
+                                <a class="nav-link " href="/Restaurant/OrderHistory">Order history</a>
+                            </li>
+
 
                             <li class="nav-item fs-4 my-auto ">
                                 <input type="submit" class="btn btn-danger btn-lg" value="Logout" onclick="location.href='@Url.Action("LogoutRestaurant", "Logout")'" />
