--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Restaurant/Restaurants.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Restaurant/Restaurants.cshtml
@@ -17,7 +17,7 @@
 <link href="~/Content/css/CreatedCSS/hyperlink.css" rel="stylesheet" />
 <section style="padding-top:10em" >
     <div class="container">
-        <h2 class="text-center  mt-5">Restaurants</h2>
+        <h2 class=" mt-5">Restaurants</h2>
         <hr class="mb-5" />
         <div class="row mb-5">
 
