--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_CustomerLayout.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_CustomerLayout.cshtml
@@ -86,8 +86,15 @@
             <li class="nav-item fs-4 me-4 my-auto">
                 <a class="nav-link " href="/Customer/FavRestaurants">Favourites</a>
             </li>
-        </ul>
+            <li class="nav-item fs-4 me-4 my-auto">
+                <a class="nav-link " href="/Customer/ActiveOrders">Active Orders</a>
+            </li>
+            <li class="nav-item fs-4 me-4 my-auto">
+                <a class="nav-link " href="/Customer/OrdersHistory">Order History</a>
+            </li>
 
+        </ul>
+        
     </div>
 
     <div class="content">
