pending - payment,order status,email confirmation, invoice creation

--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Customer/OrdersHistory.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Customer/OrdersHistory.cshtml
@@ -54,7 +54,7 @@
                             <h5>Paid : Rs. @item.TotalAmount /-</h5>
 
                         </div>
-                        <div>
+                        <div class="col-md-4">
                             <a href="/ReviewNRating/PostAReview?id=@item.Order_fk_RestId">Post a review</a>
                         </div>
 
