--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Dishes/FoodItems.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Dishes/FoodItems.cshtml
@@ -15,11 +15,11 @@
 
     }
 }
-
+<link href="~/Content/css/CreatedCSS/starRatingDisplay.css" rel="stylesheet" />
 <section style="padding-top: 10em; background-color: #3B3D59 " class="text-white">
    <div class="container">
        <div class="row">
-           <div class="col-md-4 mt-2 mb-3">
+           <div class="col-md-2 mt-2 mb-3">
             
                <img src="@Url.Content(@Model.Restaurant.Image)" style="width:150px;height:150px" class="rounded-circle border border-white border-3"/>
 
@@ -48,20 +48,35 @@
 
 
            </div>
-           <div class="col-md-4 my-auto p-0">
+           <div class="col-md-3 my-auto p-0">
+               <div class="mt-3">
+                   @for (int i = 0; i < Model.Review.RatingAverage; ++i)
+                   {
+                       <span class="starFilled"></span>
+
+                   }
+                   @for (int i = Model.Review.RatingAverage; i < 5; ++i)
+                   {
+                       <span class="starEmpty"></span>
+                   }
+
+
+               </div>
+               <a style="color:red" href="/ReviewNRating/DisplayReviews?restId=@Model.Restaurant.Id">@Model.Review.ReviewCount Customer Reviews</a>
+           </div>
+           <div class="col-md-3 my-auto p-0">
                @if (Model.Restaurant.Offer != "None")
                {
                    <div class="border rounded text-warning text-center border-2 border-warning p-2">
                        <h5 class="my-auto"><i>@Model.Restaurant.Offer on all orders</i></h5>
                    </div>
                }
-
+           </div>
 
            </div>
 
        </div>
 
-   </div>
 
 </section>
 
