--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Payment/SelectBankToPay.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Payment/SelectBankToPay.cshtml
@@ -1,4 +1,4 @@
-﻿@model FoodDeliveryWebApplication.Models.UserAddedBankAccounts
+﻿@model FoodDeliveryWebApplication.Models.BankAccounts
 
 @{
     ViewBag.Title = "SelectBankToPay";
@@ -8,34 +8,96 @@
 <link href="~/Content/css/bootstrap.min.css" rel="stylesheet" />
 
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-
-    <div class="form-horizontal">
-        <h3>Select Bank Account</h3>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.DropDownListFor(model => model.AccId, TempData["ddlUserBankList"] as List<SelectListItem>, htmlAttributes: new { @class = "control-label col-md-12" })
-            <div class="col-md-12">
-                @Html.EditorFor(model => model.AccId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AccId, "", new { @class = "text-danger" })
-            </div>
-        </div>
+<section style="padding-top:10em">
+    <div class="container">
+        <div class="card w-50 bg-light mt-5 mx-auto">
+            <div class="card-body">
 
 
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+                <div class="form-horizontal">
+                    <h4>Select Your Bank Account</h4>
+                    <hr />
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="form-group mt-5">
+
+                        <div class="col-md-12">
+                            @Html.DropDownListFor(model => model.AccId, TempData["ddlUserBankList"] as List<SelectListItem>, new { htmlAttributes = new { @class = "form-control"} })
+                            @Html.ValidationMessageFor(model => model.AccId, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div  id="makePayment" style="display:none">
+                        <div class="form-group mt-5">
+                            <h5>Enter your 6 digit pin number here</h5>
+                            <div class="col-md-12">
+                                @Html.EditorFor(model => model.PinNumber, new { htmlAttributes = new { @class = "form-control" ,@type="password"} })
+                                @Html.ValidationMessageFor(model => model.AccId, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        @Html.HiddenFor(model=>model.roleId)
+
+                        <div class="form-group mt-5">
+                            <div class="col-md-offset-2 col-md-10" >
 
 
-                <p> <button type="button" class="btn btn-primary "><i class="fas fa-mobile-alt mr-2"></i> Proceed Payment</button> </p>
+                                <p> <button type="button" class="btn btn-primary " id="btnPay"><i class="fas fa-mobile-alt mr-2"></i> Proceed Payment</button> </p>
 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                }
             </div>
         </div>
     </div>
-}
-<script src="~/Content/js/bootstrap.min.js"></script>
-<script src="~/Content/js/bootstrap.bundle.min.js"></script>
+</section>
+
+<script src="~/Scripts/jquery-3.4.1.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $("#AccId").change(function(){
+            var selIndex = $("#AccId").val();
+            if (selIndex != 0) {
+                $("#makePayment").show();
+
+            }
+            else {
+                $("#makePayment").hide();
+            }
+        })
+    })
+
+    $("#btnPay").click(function () {
+        var pinNum = $("#PinNumber").val();
+        if (pinNum == "") {
+            alert("Please enter your pin number");
+        }
+        else {
+            var accId = $("#AccId").val();
+            var roleId = $("#roleId").val();
+            var obj = { "roleId": roleId, "AccId": accId, "PinNumber": pinNum };
+            $.ajax({
+                url: "/Payment/MakePayment/",
+                method: "POST",
+                data: { "obj": obj },
+                success: function (result) {
+                    if (result == "Success") {
+                        alert("Transaction succesfull");
+                        location.href = "/Customer/ActiveOrders";
+                    }
+                    else {
+                        alert(result);
+                    }
+
+                },
+                error: function (err) {
+                    alert(err);
+                }
+            })
+        }
+    }
+</script>
 
