--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_CustomerLayout.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_CustomerLayout.cshtml
@@ -84,6 +84,9 @@
                 <a class="nav-link " href="/Customer/UserProfile">Profile</a>
             </li>
             <li class="nav-item fs-4 me-4 my-auto">
+                <a class="nav-link " href="/Payment/UserBankAccounts">Bank Accounts</a>
+            </li>
+            <li class="nav-item fs-4 me-4 my-auto">
                 <a class="nav-link " href="/Customer/FavRestaurants">Favourites</a>
             </li>
             <li class="nav-item fs-4 me-4 my-auto">
